user controller with image added
user controller with image added

--- a/postgresmicro/src/main/resources/application.properties
+++ b/postgresmicro/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
+#Database Configuration
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/users}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Server
 server.port=8083
+
