api gateway to postgres with user post and get
api gateway to postgres with user post and get

--- a/postgresmicro/src/main/resources/application.properties
+++ b/postgresmicro/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/u
 spring.datasource.driver-class-name=org.postgresql.Driver
 #Server
 server.port=8083
-
+logging.level.by.dzikovskiy.postgresmicro=DEBUG
