--- a/mongomicro/src/main/resources/application.properties
+++ b/mongomicro/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.database=UserFiles
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+server.port=8082
