--- a/usermicroservice/src/main/resources/application.properties
+++ b/usermicroservice/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8081
+host.url.mongo-db-microservice-host=http://localhost:8082/mongo
+host.url.postgres-microservice-host=http://localhost:8083/postgres
