--- a/mongomicro/src/main/resources/application.properties
+++ b/mongomicro/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 server.port=8082
+logging.level.by.dzikovskiy.mongomicro=DEBUG
