--- a/postgresmicro/src/main/resources/application.properties
+++ b/postgresmicro/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/users}
