migration to resttemplate
migration to resttemplate

--- a/usermicroservice/src/main/resources/application.properties
+++ b/usermicroservice/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
 host.url.mongo-db-microservice-host=http://localhost:8082/mongo
 host.url.postgres-microservice-host=http://localhost:8083/postgres
+logging.level.by.dzikovskiy=DEBUG
