liquibase for postgres service
liquibase for postgres service

--- a/postgresmicro/src/main/resources/application.properties
+++ b/postgresmicro/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/users}
@@ -7,3 +7,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #Server
 server.port=8083
 logging.level.by.dzikovskiy.postgresmicro=DEBUG
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+url=jdbc:postgresql://localhost:5432/users
+username=postgres
+password=password
+driver=org.postgresql.Driver
+outputChangeLogFile=src/main/resources/db/changelog/liquibase-outputChangeLog.xml
