--- a/kafkamicro/src/main/resources/application.yml
+++ b/kafkamicro/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-#Database Configuration
+#App Configuration
 spring:
   h2:
     console:
@@ -18,6 +18,12 @@ spring:
       auto-offset-reset: earliest
       properties:
         spring.json.trusted.packages: "*"
+
+#Kafka configuration
+kafka:
+  usersTopic: USERS
+  kafkaHost: 127.0.0.1:9092
+
 #Server
 server:
   port: 8084
