--- a/kafkamicro/docker-compose.yml
+++ b/kafkamicro/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   kafka:
     image: wurstmeister/kafka
-    container_name: kafka
+    container_name: kafka-micro
     ports:
       - "9092:9092"
     environment:
