--- a/postgresmicro/src/main/resources/application.yml
+++ b/postgresmicro/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.yaml
-
+  application:
+    name: local-grpc-server
 #Server
 server:
   port: 8083
@@ -20,3 +21,7 @@ logging:
     by:
       dzikovskiy:
         postgresmicro: DEBUG
+grpc:
+  server:
+    port: 9000
+    address: '127.0.0.1'
