--- a/postgresmicro/pom.xml
+++ b/postgresmicro/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>2.0.0.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/net.devh/grpc-server-spring-boot-starter -->
         <dependency>
