visa save mapping
visa save mapping

--- a/postgresmicro/src/main/resources/application.yml
+++ b/postgresmicro/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 #Database Configuration
+
+
 spring:
   jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
       ddl-auto: none
   datasource:
@@ -18,6 +24,9 @@ server:
   port: 8083
 logging:
   level:
+    org:
+      hibernate:
+        type: trace
     by:
       dzikovskiy:
         postgresmicro: DEBUG
