--- a/usermicroservice/build.gradle
+++ b/usermicroservice/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.apache.commons:commons-csv:1.8'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.4.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    runtimeOnly'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.4'
     testCompile "com.github.tomakehurst:wiremock-jre8:2.28.0"
     compile 'net.devh:grpc-client-spring-boot-starter:2.11.0.RELEASE'
