--- a/postgresmicro/src/main/resources/application.yml
+++ b/postgresmicro/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     change-log: classpath:db/changelog/changelog-master.yaml
   application:
     name: local-grpc-server
+
 #Server
 server:
   port: 8083
@@ -25,3 +26,20 @@ grpc:
   server:
     port: 9000
     address: '127.0.0.1'
+
+#Eurika and Spring admin
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${DISCOVERY_URL:http://localhost:8761}/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+management:
+  endpoints:
+    web.exposure.include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
