--- a/usermicroservice/build.gradle
+++ b/usermicroservice/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
 plugins {
     id 'org.springframework.boot' version '2.4.4'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
 }
 apply plugin: 'com.google.protobuf'
@@ -19,6 +19,8 @@ version = '0.0.1-SNAPSHOT'
 description = 'usermicroservice'
 sourceCompatibility = '11'
 def grpcVersion = '1.29.0'
+
+
 
 sourceSets {
     src {
@@ -41,6 +43,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-configuration-processor:2.4.4'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    compile 'org.jolokia:jolokia-core'
     implementation 'org.projectlombok:lombok'
     implementation'jakarta.xml.bind:jakarta.xml.bind-api'
     compile'io.jsonwebtoken:jjwt:0.9.0'
@@ -53,6 +58,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.4'
     testCompile "com.github.tomakehurst:wiremock-jre8:2.28.0"
     compile 'net.devh:grpc-client-spring-boot-starter:2.11.0.RELEASE'
+}
+
+ext {
+    set('springBootAdminVersion', "2.1.5")
+    set('springCloudVersion', "2020.0.3")
+}
+
+
+dependencyManagement {
+    imports {
+        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+
+    }
 }
 
 configurations {
