--- a/usermicroservice/src/main/resources/application.yml
+++ b/usermicroservice/src/main/resources/application.yml
@@ -25,13 +25,14 @@ spring:
     url: jdbc:h2:mem:users
   application:
     name: local-grpc-client
+
 server:
   port: 8081
 logging:
   level:
     by:
       dzikovskiy:
-        postgresmicro: DEBUG
+        usermicroservice: DEBUG
 grpc:
   client:
     local-grpc-server:
@@ -39,3 +40,20 @@ grpc:
       enableKeepAlive: true
       keepAliveWithoutCalls: true
       negotiationType: plaintext
+
+#Eurika and Spring admin
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${DISCOVERY_URL:http://localhost:8761}/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+management:
+  endpoints:
+    web.exposure.include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
