--- a/eurika-server/src/main/resources/application.yml
+++ b/eurika-server/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: ${PORT:8761}
 
+
 eureka:
   client:
     registryFetchIntervalSeconds: 5
@@ -8,6 +9,7 @@ eureka:
     serviceUrl:
       defaultZone: ${DISCOVERY_URL:http://localhost:8761}/eureka/
   instance:
+    preferIpAddress: true
     leaseRenewalIntervalInSeconds: 10
     health-check-url-path: /actuator/health
     metadata-map:
