--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,11 @@ image: maven:3-jdk-11
 build:
   stage: build
   script:
+    - cd postgresmicro
     - mvn compile
 
 test:
   stage: test
   script:
+    - cd postgresmicro
     - mvn clean test
