--- a/postgresmicro/src/test/resources/application.yml
+++ b/postgresmicro/src/test/resources/application.yml
@@ -4,17 +4,16 @@ spring:
     hibernate:
       ddl-auto: none
   datasource:
-    username: ${SPRING_DATASOURCE_USERNAME:postgres}
-    password: ${SPRING_DATASOURCE_PASSWORD:password}
-    driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/users}
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
   liquibase:
     enabled: false
     change-log: classpath:db/changelog/changelog-master.yaml
   application:
     name: local-grpc-server
   config:
-
     import: optional:configserver:http://localhost:8888
   cloud:
     config:
